removed a bunch more, tried to simplify things and use bootstrap styles where possible so it looks better on mobile. Tried to leave as much code as I could - need to do more style upates and fix the parks popups

--- a/style/layout.css
+++ b/style/layout.css
@@ -111,7 +111,7 @@ html, body {
 
 #sideNavToggle {
     background-color: #ffffff;
-    padding: 15px;
+    padding: 15px 5px 15px 15px;
     pointer-events: all !important;
 }
 
@@ -196,3 +196,9 @@ html, body {
 
 
 
+
+
+#listOfParks {
+    max-height: 400px;
+    overflow-y: scroll;
+}
